bug 237290 : crash when configuring a new account on Mac (r=ccarlen, sr=bienvenu, a=chofmann)